--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Site Title"
+title                    : "cvillalba's blog"
 title_separator          : "-"
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "cvillalba"
+description              : "This is a blog to print what I have and will learn through my carrer as Software Quality Engineer."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -61,10 +61,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Carlos Villalba"
   avatar           : "bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  bio              : "Im a Quality advocante that is making his way on an Agile and DevOps environment."
+  location         : "Chile"
   email            :
   uri              :
   bitbucket        :
