--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           :
+  github           : "https://github.com/cvillalba"
   google_plus      :
   keybase          :
   instagram        :
