@cvillalba change bio

--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ analytics:
 author:
   name             : "Carlos Villalba"
   avatar           : "bio-photo.jpg"
-  bio              : "Im a Quality advocante that is making his way on an Agile and DevOps environment."
+  bio              : "Im a Quality advocante that pushes devops culture in an agile environment."
   location         : "Chile"
   email            :
   uri              :
